# MI11-TP-ARM

./: .gitignore  CMakeLists.txt  noyau.c  testfile.c
Distribuable/: DinerPhilosophes.c  apf9328.cfg  fifo.c  fifo.h  imx_serial.c  imx_timers.h  noyau.c  noyau.h  noyaufil.c  noyautes.c  pipe.h  prodcons.c  sem.c  sem.h  testfile.c
Distribuable/Eclipse/: .cproject  .project  DinerPhilosophes.c  fifo.c  fifo.h  imx_aitc.h  imx_gpio.h  noyau.c  noyaufil.c  noyautes.c  output_log_partie1.txt  pipe.c  pipe.h  prodcons_pipe.c  sem.c  sem.h  serialio.c  testfile.c.txt
Distribuable/Eclipse/Debug/: LinuxEmbarque  makefile  subdir.mk
Rapport/: .rapport_mini_noyau_rt_ARM_part1.tex.swo  .rapport_mini_noyau_rt_ARM_part1.tex.swp  rapport_mini_noyau_rt_ARM.tex  rapport_mini_noyau_rt_ARM_part1.tex  rapport_mini_noyau_rt_ARM_part2.tex  rapport_mini_noyau_rt_ARM_part3.tex
